Auto-snapshot management (#9739)
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>
Signed-off-by: Venkatachalam Vairavan <vvairava@in.ibm.com>